# AerialTN_utility

./: CMakeLists.txt  package.xml
launch/: decoder_launch.py  orbslam_mono_inertial_launch.py  orbslam_mono_launch.py  record_decoded_launch.py
rviz/: orbslam.rviz  voxl.rviz
src/: ircam_decoder.cpp  px4_odom_republisher_node.cpp
voxl_data/camera_calibs_for_voxl/: opencv_ircam_intrinsics.yml  opencv_low_light_down_intrinsics.yml  opencv_tracking_down_intrinsics.yml  opencv_tracking_front_intrinsics.yml
voxl_data/camera_calibs_not_for_voxl/: opencv_low_light_down_intrinsics.yml  opencv_tracking_down_intrinsics.yml
voxl_data/configuration_files/: backup-voxl-camera-server.conf  extrinsics.conf  extrinsics_airlab.conf
voxl_data/services/: mpa_to_ros_startup.service  mpa_to_ros_startup.sh
